Footer section is  added with responsive

--- a/index.html
+++ b/index.html
@@ -151,9 +151,41 @@
 
     </div>
   </section>
+  <section class="seller-section flex justify-between items-center w-full">
+    <div class="seller-section-content w-1/2 flex-col">
+     <div class="seller-find flex justify-around items-center  ">
+      <img src="icons/house.png" alt="" class="w-20 h-20">
+      <div class="w-1/2">
+        <p class="text-[#363958] font-bold font-4xl">Find the Perfect Fit</p>
+        <p class="text-[#3E3E3E] text-xxl">Everybody is different, which is why we
+          offer styles for every body.</pn>
+      </div>
+     </div>
+     <div class="seller-find flex justify-around items-center  ">
+      <img src="icons/house.png" alt="" class="w-20 h-20">
+      <div class="w-1/2">
+        <p class="text-[#363958] font-bold font-4xl">Find the Perfect Fit</p>
+        <p class="text-[#3E3E3E] text-xxl">Everybody is different, which is why we
+          offer styles for every body.</pn>
+      </div>
+     </div>
+     <div class="seller-find flex justify-around items-center  ">
+      <img src="icons/house.png" alt="" class="w-20 h-20">
+      <div class="w-1/2">
+        <p class="text-[#363958] font-bold font-4xl">Find the Perfect Fit</p>
+        <p class="text-[#3E3E3E] text-xxl">Everybody is different, which is why we
+          offer styles for every body.</pn>
+      </div>
+     </div>
+    </div>
+    <div class="seller-section-img">
+<img src="images/shopping.png" alt="" class="w-1/2">
+    </div>
+  </section>
  </main>
- <footer>
-
+ <footer class="text-center bg-violet-400 text-l p-10">
+  <p class="font-bold">Penguin Fashion</p>
+  <p>@2023 Sumaiya Siddiqa Jui</p>
  </footer>
 </body>
 </html>
